<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/contact1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/contact1_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:text="@string/contact1_name"/>

        <TextView
            android:id="@+id/contact1_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginEnd="25dp"
            android:textStyle="bold"
            android:text="@string/contact1_lastname"/>

        <TextView
            android:id="@+id/contact1_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/contact1_phone_number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/contact2_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:text="@string/contact2_name"/>

        <TextView
            android:id="@+id/contact2_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginEnd="25dp"
            android:textStyle="bold"
            android:text="@string/contact2_lastname"/>

        <TextView
            android:id="@+id/contact2_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/contact2_phone_number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/contact3_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:text="@string/contact3_name"/>

        <TextView
            android:id="@+id/contact3_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginEnd="25dp"
            android:textStyle="bold"
            android:text="@string/contact3_lastname"/>

        <TextView
            android:id="@+id/contact3_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/contact3_phone_number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/contact4_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:text="@string/contact4_name"/>

        <TextView
            android:id="@+id/contact4_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginEnd="25dp"
            android:textStyle="bold"
            android:text="@string/contact2_lastname"/>

        <TextView
            android:id="@+id/contact4_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/contact4_phone_number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/contact5_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:text="@string/contact5_name"/>

        <TextView
            android:id="@+id/contact5_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginEnd="25dp"
            android:textStyle="bold"
            android:text="@string/contact5_lastname"/>

        <TextView
            android:id="@+id/contact5_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/contact5_phone_number"/>

    </LinearLayout>



</LinearLayout>