<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

       <TextView
           android:id="@+id/name_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/name_text"
           android:textSize="20sp"
           android:layout_marginEnd="20dp" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/lastname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname_text"
            android:textSize="20sp"
            android:layout_marginEnd="20dp" />

        <EditText
            android:id="@+id/lastname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_text"
            android:textSize="20sp"
            android:layout_marginEnd="20dp" />

        <EditText
            android:id="@+id/phone_number_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>